[gd_scene load_steps=10 format=2]

[ext_resource path="res://Screens/Pause.gd" type="Script" id=2]
[ext_resource path="res://Assets/Pause_Menu.PNG" type="Texture" id=3]
[ext_resource path="res://Assets/Pause_Icon.PNG" type="Texture" id=4]
[ext_resource path="res://Assets/Play_Button.PNG" type="Texture" id=5]
[ext_resource path="res://Assets/Quit_Button.PNG" type="Texture" id=6]
[ext_resource path="res://Assets/Settings_Button.PNG" type="Texture" id=7]
[ext_resource path="res://Assets/Pause_Icon_Mask.PNG" type="BitMap" id=8]
[ext_resource path="res://Presets/HoverButton.gd" type="Script" id=9]
[ext_resource path="res://Assets/Button_Mask.PNG" type="BitMap" id=10]

[node name="PauseMenuNode" type="Node2D"]
pause_mode = 2
script = ExtResource( 2 )
scaleUpTime = 0.3

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 4

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.552941 )

[node name="PauseMenu" type="PopupDialog" parent="CanvasLayer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1029, 611 )
rect_pivot_offset = Vector2( 960, 540 )
popup_exclusive = true

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/PauseMenu"]
margin_left = 276.0
margin_top = 135.0
margin_right = 1677.0
margin_bottom = 929.0
rect_min_size = Vector2( 1401, 794 )
texture = ExtResource( 3 )
expand = true

[node name="Resume" type="TextureButton" parent="CanvasLayer/PauseMenu"]
margin_left = 784.0
margin_top = 556.0
margin_right = 934.0
margin_bottom = 706.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 5 )
texture_click_mask = ExtResource( 10 )
expand = true
script = ExtResource( 9 )

[node name="Settings" type="TextureButton" parent="CanvasLayer/PauseMenu"]
margin_left = 987.0
margin_top = 551.0
margin_right = 1137.0
margin_bottom = 701.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 7 )
expand = true
script = ExtResource( 9 )

[node name="Quit" type="TextureButton" parent="CanvasLayer/PauseMenu"]
margin_left = 884.0
margin_top = 706.0
margin_right = 1034.0
margin_bottom = 856.0
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 6 )
texture_click_mask = ExtResource( 10 )
expand = true
script = ExtResource( 9 )

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu"]
margin_left = 1219.0
margin_top = 702.0
margin_right = 1569.0
margin_bottom = 796.0
custom_constants/separation = 50

[node name="Pause" type="TextureButton" parent="."]
margin_left = 8.629
margin_top = 130.623
margin_right = 248.629
margin_bottom = 370.623
rect_scale = Vector2( 0.744, 0.706 )
focus_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 4 )
texture_hover = ExtResource( 4 )
texture_click_mask = ExtResource( 8 )
expand = true
script = ExtResource( 9 )

[node name="Tween" type="Tween" parent="."]

[connection signal="pressed" from="CanvasLayer/PauseMenu/Resume" to="." method="_on_Resume_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/Quit" to="." method="_on_Quit_pressed"]
[connection signal="pressed" from="Pause" to="." method="_on_Pause_pressed"]
[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
